--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "retail-shop-pro",
-  "version": "1.0.0",
-  "description": "Retail Shop Management System with SQLite Database",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
-  },
-  "keywords": ["retail", "billing", "inventory", "gst"],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "better-sqlite3": "^9.2.2",
-    "cors": "^2.8.5",
-    "bcrypt": "^5.1.1"
-  }
+    "name": "retail-shop-pro",
+    "version": "1.0.0",
+    "description": "Retail Shop Management System with PostgreSQL",
+    "main": "api/index.js",
+    "scripts": {
+        "dev": "vercel dev",
+        "build": "echo 'No build step required'",
+        "start": "vercel dev"
+    },
+    "keywords": [
+        "retail",
+        "billing",
+        "inventory",
+        "gst"
+    ],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.18.2",
+        "pg": "^8.11.3",
+        "cors": "^2.8.5",
+        "bcrypt": "^5.1.1"
+    }
 }
