Remove main field from package.json
- Serverless functions don't need a main entry point
- Fixes Vercel trying to run non-existent server.js
- All endpoints are in api/ directory

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
+```json
 {
     "name": "retail-shop-pro",
     "version": "1.0.0",
     "description": "Retail Shop Management System with PostgreSQL",
-    "main": "api/index.js",
     "scripts": {
         "dev": "vercel dev",
         "build": "echo 'No build step required'",
