--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,10 @@
             "use": "@vercel/node"
         }
     ],
-    "routes": [
+    "rewrites": [
         {
-            "src": "/api/(.*)",
-            "dest": "/api/$1"
-        },
-        {
-            "handle": "filesystem"
+            "source": "/api/(.*)",
+            "destination": "/api/$1"
         }
     ],
     "headers": [
