--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "express": "^4.18.2",
         "pg": "^8.11.3",
         "cors": "^2.8.5",
-        "bcrypt": "^5.1.1"
+        "bcrypt": "^5.1.1",
+        "@sparticuz/chromium": "^119.0.2",
+        "puppeteer-core": "^21.6.1"
     }
 }
