--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.18.2",
-        "pg": "^8.11.3",
-        "cors": "^2.8.5",
         "bcrypt": "^5.1.1",
-        "@sparticuz/chromium": "^119.0.2",
-        "puppeteer-core": "^21.6.1"
+        "chrome-aws-lambda": "^10.1.0",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "pg": "^8.11.3"
     }
 }
