Replace Puppeteer with PDFShift API for reliable PDF generation

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,23 @@
-# Environment Variables for Vercel Postgres
+# Environment Variables
 
-# These will be automatically set by Vercel when you add a Postgres database
-# For local development, copy this file to .env.local and fill in your values
+## Required Variables
 
-POSTGRES_URL="postgres://username:password@host:port/database"
-POSTGRES_PRISMA_URL="postgres://username:password@host:port/database?pgbouncer=true"
-POSTGRES_URL_NON_POOLING="postgres://username:password@host:port/database"
-POSTGRES_USER="username"
-POSTGRES_HOST="host"
-POSTGRES_PASSWORD="password"
-POSTGRES_DATABASE="database"
+### PDFSHIFT_API_KEY
+Your PDFShift API key for PDF generation.
+
+**How to get it:**
+1. Sign up at https://pdfshift.io
+2. Get your API key from the dashboard
+3. Add to Vercel environment variables
+
+**Free tier:** 50 PDFs per month
+
+## How to Add to Vercel
+
+1. Go to your Vercel project dashboard
+2. Settings → Environment Variables
+3. Add new variable:
+   - Name: `PDFSHIFT_API_KEY`
+   - Value: `your_api_key_here`
+   - Environments: Production, Preview, Development
+4. Redeploy your application
